fix logging out the user, email_modal size on mobile and remove success icon when request fails

--- a/packages/account/src/Styles/account.scss
+++ b/packages/account/src/Styles/account.scss
@@ -647,6 +647,9 @@ $MIN_HEIGHT_FLOATING: calc(
                             max-width: 40rem;
                         }
                         width: 40rem;
+                        .dc-input__label {
+                            color: var(--text-general) !important;
+                        }
                     }
                 }
             }
